--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,31 +20,35 @@
   <body style="padding-top: 70px;">
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <a class="navbar-brand" href="/">{{ site.name }}</a>
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-      <ul class="nav navbar-nav">
+      
+      <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav">
       
         <li class="dropdown">
-         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             3D Printables <b class="caret"></b>
-         </a>
+          </a>
           <ul class="dropdown-menu">
             <li><a href="#">Bug-A-Salt Choke Tube</a></li>
           </ul>
-        </li>
+          </li>
         
-        <li><a href="#">3D Printing Tips</a></li>
+          <li><a href="#">3D Printing Tips</a></li>
         
-        <li><a href="#">Code Projects</a></li>
+          <li><a href="#">Code Projects</a></li>
         
-        <li><a href="#">About Me</a></li>
-      </ul>
-      <ul class="nav nav-bar pull-right">
-        <li>
-          <a href="https://twitter.com/j5project" class="twitter-follow-button navbar-btn" data-show-count="false" data-size="large">Follow @j5project</a>
+          <li class="{% if page.link_location == 'about_me' %}active{% endif %}">
+            <a href="/about_me">About Me</a>
+          </li>
+        </ul>
+        <ul class="nav nav-bar pull-right">
+          <li>
+            <a href="https://twitter.com/j5project" class="twitter-follow-button navbar-btn" data-show-count="false" data-size="large">Follow @j5project</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-        </li>
-      </ul>
-    </nav>
+          </li>
+        </ul>
+      </nav>
+    </div>
 
     <div class="container">
       <div class="row">
@@ -57,7 +61,11 @@
             <li><a href="#">3D Printing Tips</a></li>
             <li><a href="#">Bug-A-Salt Choke Tube</a></li>
             <li><a href="#">Code Projects</a></li>
-            <li><a href="#">About Me</a></li>
+            <li class="{% if page.link_location == 'about_me' %}active{% endif %}">
+              <a href="/about_me">
+                About Me
+              </a>
+            </li>
           </ul>
         </div>
       
