got in most of the code projects

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,10 +39,8 @@
             </a>
           </li>
         
-          <li><a href="#">Code Projects</a></li>
-        
-          <li class="{% if page.link_location == 'about_me' %}active{% endif %}">
-            <a href="/about_me">About Me</a>
+          <li class="{% if page.link_location == 'code_projects' %}active{% endif %}">
+            <a href="/code_projects">Code Projects</a>
           </li>
         </ul>
         <ul class="nav nav-bar pull-right">
@@ -71,12 +69,8 @@
             
             <li><a href="#">Bug-A-Salt Choke Tube</a></li>
             
-            <li><a href="#">Code Projects</a></li>
-            
-            <li class="{% if page.link_location == 'about_me' %}active{% endif %}">
-              <a href="/about_me">
-                About Me
-              </a>
+            <li class="{% if page.link_location == 'code_projects' %}active{% endif %}">
+              <a href="/code_projects">Code Projects</a>
             </li>
             
           </ul>
