start on bandit mk1 page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,15 +40,21 @@
               <a href="/">The J5 Project</a>
             </li>
             
-            <li class="{% if page.link_location == 'printing_tips' %}active{% endif %}">
-              <a href="/3d_printing_tips">
-                3D Printing Tips
+            <li class="{% if page.link_location == 'bandit_mk1' %}active{% endif %}">
+              <a href="/bandit_mk1">
+                Bandit MK1 Rubber Band Gun
               </a>
             </li>
             
             <li class="{% if page.link_location == 'choke_tube' %}active{% endif %}">
               <a href="/choke_tube">
                 Bug-A-Salt Choke Tube
+              </a>
+            </li>
+            
+            <li class="{% if page.link_location == 'printing_tips' %}active{% endif %}">
+              <a href="/3d_printing_tips">
+                3D Printing Tips
               </a>
             </li>
             
