--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,6 +46,12 @@
               </a>
             </li>
             
+            <li class="{% if page.link_location == 'bandit_mk2' %}active{% endif %}">
+              <a href="/bandit_mk2">
+                Bandit MK2 Rubber Band Gun
+              </a>
+            </li>
+            
             <li class="{% if page.link_location == 'choke_tube' %}active{% endif %}">
               <a href="/choke_tube">
                 Bug-A-Salt Choke Tube
