--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,6 +58,12 @@
               </a>
             </li>
             
+            <li class="{% if page.link_location == 'ant_trap' %}active{% endif %}">
+              <a href="/ant_trap">
+                Ant Trap
+              </a>
+            </li>
+            
             <li class="{% if page.link_location == 'printing_tips' %}active{% endif %}">
               <a href="/3d_printing_tips">
                 3D Printing Tips
