added bitcoin donation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -74,6 +74,13 @@
               <a href="/code_projects">Code Projects</a>
             </li>
             
+            <li>
+              <a href="bitcoin:1LfpngaERQmNrckZgjiTaHPaRo8PECteGF?amount=0.001&label=Donate%20to%20the%20J5%20Project" class="thumbnail" target="_blank">
+                <p align='center'>Donate to the J5 Project!</p>
+                <img src="/img/bitcoin_donate.png" />
+              </a>
+            </li>
+            
           </ul>
         </div>
       
