--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,6 +40,12 @@
               <a href="/">The J5 Project</a>
             </li>
             
+            <li class="{% if page.link_location == 'printable_coin' %}active{% endif %}">
+              <a href="/printable_coin">
+                Printable Custom Coin
+              </a>
+            </li>
+            
             <li class="{% if page.link_location == 'bandit_mk1' %}active{% endif %}">
               <a href="/bandit_mk1">
                 Bandit MK1 Rubber Band Gun
