--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,6 +40,12 @@
               <a href="/">The J5 Project</a>
             </li>
             
+            <li class="{% if page.link_location == 'frame' %}active{% endif %}">
+              <a href="/frame">
+                Printable Picture Frame
+              </a>
+            </li>
+            
             <li class="{% if page.link_location == 'printable_coin' %}active{% endif %}">
               <a href="/printable_coin">
                 Printable Custom Coin
